--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MCPOOL - 我的世界公益服务器</title>
+    <link rel="icon" href="https://static.wikia.nocookie.net/minecraft_zh_gamepedia/images/7/75/Wheat_JE2_BE2.png/revision/latest?cb=20190424114455" type="image/png">
+    <link rel="shortcut icon" href="https://static.wikia.nocookie.net/minecraft_zh_gamepedia/images/7/75/Wheat_JE2_BE2.png/revision/latest?cb=20190424114455" type="image/png">
     <style>
         :root {
             --primary-color: #d6a74b;
